# mg-tests

./: .gitignore  Makefile.am  README.md  configure.ac  run-auto-tests.sh
3.4/: Makefile.am  basicshapingengine.c  createtextruns.c
4.0/: Makefile.am  README.md  basicshapingengine.c  bidicharactertest.c  biditest.c  complexshapingengine.c  createlayout.c  createlogfontex.c  createtextruns.c  drawglyphstringex.c  exstubs-null.c  fetch-ucd-test.sh  helpers.c  helpers.h  run-auto-test.sh  sliceallocator.c  ustrgetbreaks.c
5.0/: Makefile.am  MiniGUI.cfg  broadcastmessage.c  capture.c  deadlock.c  enddialog.c  list.h  longpressctrl.c  movewindow.c  setwindowregion.c  slotset.c  tickcount.c  timer.c  virtualwindow.c  zorder.c
api/: Makefile.am  MiniGUI.cfg  autosecondarydc.c  destroymainwindow.c  destroymainwindow2.c  drawtext-bidi.c  drawtext-ttf.c  drawtext.c  enddialog.c  movewindow.c  setbkmode.c  setwindowregion.c  textextent.c  textextent2.c  timer.c
comm-engines/: Makefile.am  comminput_ops.c  commlcd_ops.c
comm-engines-freertos/: README.md  commlcd_ops.c
compositor/: Makefile.am  MiniGUI.cfg  combobox.c  docker.c  edit.c  eventdumper.c  flying_window.c  helloworld.c  launcher.c  menubutton.c  mginit.c  null-loop.c  screenlock.c  scrnsaver.c  static.c  trackbar.c  wallpaper-dynamic.c  wallpaper-welcome.c  wallpaper.c  welcome-data.c  welcome.c
control/: Makefile.am  MiniGUI.cfg  edit.c
dri-engine/: Makefile.am  MiniGUI.cfg  README.md  flying_window.c  intel_batchbuffer.c  intel_batchbuffer.h  intel_context.h  intel_i915_driver.c  intel_reg.h  mydridriver.c  testdri.c
drm/: Makefile.am  MiniGUI.cfg  mydrmdriver.c
drm-engine/: Makefile.am  MiniGUI.cfg  README.md  flying_window.c  intel_batchbuffer.c  intel_batchbuffer.h  intel_chipset.c  intel_chipset.h  intel_context.h  intel_i915_driver.c  ply-bitarray.h  ply-hashtable.h  testdrm.c
drm-extra-input/: Makefile.am  MiniGUI.cfg  README.md  eventdumper.c  mydrmdriver.c  ply-hashtable.c
extra-input/: Makefile.am  MiniGUI.cfg  README.md  eventdumper.c  ply-hashtable.c
images/: Makefile.am  list.h  showimage.c
resmgr/: Makefile.am  resmgr.c  str2key.c  test_fnv.c
shared-surface/: Makefile.am  MiniGUI.cfg  consumer.c  global.h  mginit.c  producer-clwin.c  producer-named.c
src/: Makefile.am  MiniGUI.cfg  exstubs-null.c  fps.c  helloworld.c  mginit.c  speed-meter.c
