EXTRA_DIST = MiniGUI.cfg

noinst_PROGRAMS = \
    slotset \
    timer \
    virtualwindow \
    tickcount \
    zorder \
    movewindow \
    enddialog \
    setwindowregion \
    mginit \
    $(NULLFILE)

slotset_SOURCES = slotset.c $(COMMFILES)
timer_SOURCES = timer.c $(COMMFILES)
virtualwindow_SOURCES = virtualwindow.c $(COMMFILES)
tickcount_SOURCES = tickcount.c $(COMMFILES)
zorder_SOURCES = zorder.c $(COMMFILES)
movewindow_SOURCES = movewindow.c $(COMMFILES)
enddialog_SOURCES = enddialog.c $(COMMFILES)
setwindowregion_SOURCES = setwindowregion.c $(COMMFILES)
mginit_SOURCES = mginit.c $(COMMFILES)
