EXTRA_DIST = MiniGUI.cfg

noinst_PROGRAMS = \
    slotset \
    timer \
    virtualwindow \
    tickcount \
    zorder \
    capture \
    $(NULLFILE)

slotset_SOURCES = slotset.c $(COMMFILES)
timer_SOURCES = timer.c $(COMMFILES)
virtualwindow_SOURCES = virtualwindow.c $(COMMFILES)
tickcount_SOURCES = tickcount.c $(COMMFILES)
zorder_SOURCES = zorder.c $(COMMFILES)
capture_SOURCES = capture.c $(COMMFILES)
