EXTRA_DIST = MiniGUI.cfg

noinst_PROGRAMS = \
    movewindow \
    enddialog \
    setwindowregion \
    destroymainwindow \
    destroymainwindow2 \
    autosecondarydc \
    textextent \
    $(NULLFILE)

movewindow_SOURCES = movewindow.c $(COMMFILES)
enddialog_SOURCES = enddialog.c $(COMMFILES)
setwindowregion_SOURCES = setwindowregion.c $(COMMFILES)
destroymainwindow_SOURCES = destroymainwindow.c $(COMMFILES)
destroymainwindow2_SOURCES = destroymainwindow2.c $(COMMFILES)
autosecondarydc_SOURCES = autosecondarydc.c $(COMMFILES)
textextent_SOURCES = textextent.c $(COMMFILES)
