EXTRA_DIST = MiniGUI.cfg

noinst_PROGRAMS = \
    timer \
    movewindow \
    enddialog \
    setwindowregion \
    destroymainwindow \
    destroymainwindow2 \
    autosecondarydc \
    textextent \
    textextent2 \
    setbkmode \
    drawtext \
    $(NULLFILE)

timer_SOURCES = timer.c $(COMMFILES)
movewindow_SOURCES = movewindow.c $(COMMFILES)
enddialog_SOURCES = enddialog.c $(COMMFILES)
setwindowregion_SOURCES = setwindowregion.c $(COMMFILES)
destroymainwindow_SOURCES = destroymainwindow.c $(COMMFILES)
destroymainwindow2_SOURCES = destroymainwindow2.c $(COMMFILES)
autosecondarydc_SOURCES = autosecondarydc.c $(COMMFILES)
textextent_SOURCES = textextent.c $(COMMFILES)
textextent2_SOURCES = textextent2.c $(COMMFILES)
setbkmode_SOURCES = setbkmode.c $(COMMFILES)
drawtext_SOURCES = drawtext.c $(COMMFILES)
