noinst_PROGRAMS=wallpaper helloworld static edit trackbar scrnsaver eventdumper welcome mginit

wallpaper_SOURCES = wallpaper.c
helloworld_SOURCES = helloworld.c
static_SOURCES = static.c
edit_SOURCES = edit.c
trackbar_SOURCES = trackbar.c
scrnsaver_SOURCES = scrnsaver.c
eventdumper_SOURCES = eventdumper.c flying_window.c
welcome_SOURCES = welcome.c welcome-data.c
mginit_SOURCES = mginit.c

eventdumper_LDADD = -lmgeff
welcome_LDADD = -lmgeff

DIST_SUBDIRS=res
