noinst_PROGRAMS=wallpaper-dynamic wallpaper-welcome helloworld static edit combobox menubutton trackbar scrnsaver eventdumper docker screenlock launcher mginit

wallpaper_dynamic_SOURCES = wallpaper-dynamic.c
wallpaper_welcome_SOURCES = wallpaper-welcome.c welcome-data.c
helloworld_SOURCES = helloworld.c
static_SOURCES = static.c
edit_SOURCES = edit.c
menubutton_SOURCES = menubutton.c
combobox_SOURCES = combobox.c
trackbar_SOURCES = trackbar.c
scrnsaver_SOURCES = scrnsaver.c
eventdumper_SOURCES = eventdumper.c flying_window.c
docker_SOURCES = docker.c
screenlock_SOURCES = screenlock.c
launcher_SOURCES = launcher.c
mginit_SOURCES = mginit.c

wallpaper_welcome_LDADD = -lmgeff
eventdumper_LDADD = -lmgeff
mginit_LDADD = -lmgeff

EXTRA_DIST=res
